--- a/src/app/pages/profile/profile-home/profile-home.component.html
+++ b/src/app/pages/profile/profile-home/profile-home.component.html
@@ -1,16 +1,10 @@
 <nav mat-tab-nav-bar [tabPanel]="tabPanel" mat-stretch-tabs="true" mat-align-tabs="start">
   @for (link of navLinks; track link.path) {
-    <a
-      mat-tab-link
-      [routerLink]="link.path"
-      routerLinkActive
-      #rla="routerLinkActive"
-      [active]="isLinkActive(link.path, rla.isActive)"
-      [queryParamsHandling]="'preserve'"
-    >
-      <mat-icon>{{ link.icon }}</mat-icon>
-      <span class="nav-link-text">{{ link.label }}</span>
-    </a>
+  <a mat-tab-link [routerLink]="link.path" routerLinkActive #rla="routerLinkActive"
+    [active]="isLinkActive(link.path, rla.isActive)" [queryParamsHandling]="'preserve'">
+    <mat-icon>{{ link.icon }}</mat-icon>
+    <span class="nav-link-text hide-tiny">{{ link.label }}</span>
+  </a>
   }
 </nav>
 
