--- a/src/app/components/navigation/navigation.html
+++ b/src/app/components/navigation/navigation.html
@@ -12,5 +12,7 @@
     <mat-icon>arrow_back</mat-icon>
   </button>
 } @else {
-  <img src="icons/icon.svg" class="app-icon hide-tiny" alt="Nostria icon" />
+  <span [routerLink]="['/']">
+    <img src="icons/icon.svg" class="app-icon hide-tiny" alt="Nostria icon" />
+  </span>
 }
