style: Add clickable class for pointer cursor on navigation icon

--- a/src/app/components/navigation/navigation.html
+++ b/src/app/components/navigation/navigation.html
@@ -12,7 +12,7 @@
     <mat-icon>arrow_back</mat-icon>
   </button>
 } @else {
-  <span [routerLink]="['/']">
+  <span class="clickable" [routerLink]="['/']">
     <img src="icons/icon.svg" class="app-icon hide-tiny" alt="Nostria icon" />
   </span>
 }
