--- a/src/styles.scss
+++ b/src/styles.scss
@@ -790,6 +790,10 @@ iframe {
   border: 0;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 /* Clickable image styles */
 .clickable-image {
   cursor: pointer;
