--- a/src/app/components/media-player/media-player.component.html
+++ b/src/app/components/media-player/media-player.component.html
@@ -193,7 +193,7 @@
           <mat-icon>queue_music</mat-icon>
         </button>
 
-        <button matTooltip="Fullscreen Media Player" (click)="toggleFullscreen()" class="hide-small" mat-icon-button>
+        <button matTooltip="Fullscreen Media Player" (click)="toggleFullscreen()" mat-icon-button>
           @if (!layout.fullscreenMediaPlayer()) {
           <mat-icon>open_in_full</mat-icon>
           } @else {
