feat: Enhance media player with draggable regions and titlebar support for window-controls-overlay; adjust positioning for fullscreen mode

--- a/src/app/components/media-player/media-player.component.html
+++ b/src/app/components/media-player/media-player.component.html
@@ -10,58 +10,58 @@
   </div>
   }
 
-  <div class="media-player-controls nodrag">
+  <div class="media-player-controls">
     @if (media.hasQueue()) {
     @if (media.current?.type === 'Podcast') {
-    <button (click)="media.rate()" mat-icon-button>
+    <button (click)="media.rate()" mat-icon-button class="nodrag">
       <mat-icon>speed</mat-icon>
     </button>
     }
 
     @if (media.current?.type === 'Podcast') {
-    <button (click)="media.rewind(10)" class="hide-small" mat-icon-button>
+    <button (click)="media.rewind(10)" class="hide-small" mat-icon-button class="nodrag">
       <mat-icon>replay_10</mat-icon>
     </button>
     }
 
-    <button [disabled]="!media.canPrevious()" (click)="media.previous()" mat-icon-button>
+    <button [disabled]="!media.canPrevious()" (click)="media.previous()" mat-icon-button class="nodrag">
       <mat-icon>skip_previous</mat-icon>
     </button>
 
     @if (media.paused) {
-    <button (click)="media.resume()" mat-icon-button>
+    <button (click)="media.resume()" mat-icon-button class="nodrag">
       <mat-icon>play_arrow</mat-icon>
     </button>
     } @else {
-    <button (click)="media.pause()" mat-icon-button>
+    <button (click)="media.pause()" mat-icon-button class="nodrag">
       <mat-icon>pause</mat-icon>
     </button>
     }
 
-    <button [disabled]="!media.canNext()" (click)="media.next()" mat-icon-button>
+    <button [disabled]="!media.canNext()" (click)="media.next()" mat-icon-button class="nodrag">
       <mat-icon>skip_next</mat-icon>
     </button>
 
     @if (media.current?.type === 'Podcast') {
-    <button (click)="media.forward(10)" class="hide-small" mat-icon-button>
+    <button (click)="media.forward(10)" class="hide-small" mat-icon-button class="nodrag">
       <mat-icon>forward_10</mat-icon>
     </button>
     }
     }
 
     <!-- @if (!media.videoMode() && media.muted) {
-    <button mat-icon-button (click)="media.mute()">
+    <button mat-icon-button (click)="media.mute()" class="nodrag">
       <mat-icon>volume_off</mat-icon>
     </button>
     }
 
     @if (!media.videoMode() && !media.muted) {
-    <button mat-icon-button (click)="media.mute()">
+    <button mat-icon-button (click)="media.mute()" class="nodrag">
       <mat-icon>volume_up</mat-icon>
     </button>
     } -->
 
-    <button (click)="media.pause()" routerLink="/media-queue" mat-icon-button>
+    <button (click)="media.pause()" routerLink="/media-queue" mat-icon-button class="nodrag">
       <mat-icon>queue_music</mat-icon>
     </button>
   </div>
