feat: Implement "Add Person" feature with dialog for following users by public key

--- a/src/app/pages/people/people.component.scss
+++ b/src/app/pages/people/people.component.scss
@@ -37,6 +37,12 @@
     align-items: center;
     gap: 1rem;
 
+    button[mat-flat-button] {
+      mat-icon {
+        margin-right: 0.5rem;
+      }
+    }
+
     .view-options {
       display: flex;
     }
