--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1106,3 +1106,17 @@ app-media-queue .media-list mat-list {
     }
   }
 }
+
+.nostr-mention {
+  color: var(--mat-sys-primary);
+  cursor: pointer !important;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  &:active {
+    color: var(--mat-sys-primary-container);
+  }
+}
