feat: Add Playlists button to navigation and update icon in Media Queue

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -172,6 +172,10 @@
         <mat-icon>edit_document</mat-icon>
         <span>Drafts</span>
       </button>
+      <button mat-menu-item routerLink="/playlists">
+        <mat-icon>playlist_play</mat-icon>
+        <span>Playlists</span>
+      </button>
       <button mat-menu-item routerLink="/media-queue">
         <mat-icon>queue_music</mat-icon>
         <span>Media Queue</span>
