--- a/src/app/pages/media-queue/media-queue.component.html
+++ b/src/app/pages/media-queue/media-queue.component.html
@@ -3,7 +3,7 @@
     <div class="queue-nav">
       <h2>Media Queue</h2>
       <a mat-button routerLink="/playlists" class="playlists-link">
-        <mat-icon>queue_music</mat-icon>
+        <mat-icon>playlist_play</mat-icon>
         View Playlists
       </a>
     </div>
